maze.lessons.maze.island.IslandMaze.scala.error
Escaper:24: error: value ~= is not a member of Int
while(getX()~=(0)){
            ^